--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^1.2.0",
     "@astrojs/rss": "^1.0.3",
-    "astro": "^1.6.11"
+    "astro": "^1.6.11",
+    "preact": "^10.6.5"
   }
 }
